--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
             </div>
             <div class="container">
                 
-                <a href="/2024/"><div class="year" id="y2024">
-                    <h2 class="year-title">2024</h2>
-                </div></a>
+                <div class="year" id="y2024">
+                    <h2 class="year-title">
+                        <a class="year-link" href="/2024/">2024</a>
+                    </h2>
+                            <!-- <h2 class="year-title">2024</h2> -->
+                </div>
                 
             </div>
             <div id="scrollup">
