--- a/index.html
+++ b/index.html
@@ -77,11 +77,8 @@
             </div>
             <div class="container">
                 
-                <div class="year" id="y2024">
-                    <h2 class="year-title">
-                        <a class="year-link" href="/2024/">2024</a>
-                    </h2>
-                            <!-- <h2 class="year-title">2024</h2> -->
+                <div class="year" id="y2024" onclick="window.location.href = '/2024/'">
+                    <h2 class="year-title">2024</h2>
                 </div>
                 
             </div>
