archived committees and issues
removed uploads cuz there's no point - who's gonna go back to their old resos anyways-

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <a class="normal" href="/registration">Photos</a>
-                <a class="normal" href="/contact">Uploads</a>
+                <!-- <a class="normal" href="/contact">Uploads</a> -->
                 <p class="icon" onclick="show_bars()" style="height: 30px;">
                         <span id="bar1" class="bar" style="--i:0"></span>
                         <span id="bar2" class="bar" style="--i:9"></span>
@@ -64,7 +64,7 @@
                 </li></ul>
                 <li class="main"><a href="/registration">Photos</a></li>
                 
-                <li class="main"><a href="/contact">Uploads</a></li>
+                <!-- <li class="main"><a href="/contact">Uploads</a></li> -->
             </ul>
         </div>
         <noscript><div id="js_alert">
