laptop version gsaa and photos archived

--- a/photos.html
+++ b/photos.html
@@ -6,8 +6,8 @@
         <meta name="color-scheme" content="light">
         <meta name="robots" content="index, follow">
         <meta property="og:type" content="wesbite">
-        <meta property="og:title" content="RijnMUN Archive">
-        <meta property="og:url" content="https://archive.rijnmun.org/">
+        <meta property="og:title" content="RijnMUN Archive Photos">
+        <meta property="og:url" content="https://www.rijnmun.org/">
         <meta property="og:site_name" content="RijnMUN">
         <meta name="theme-color" content="#23569090">
         <meta name="description" content="An archive of Het Rijnlands Lyceum Oegstgeest Model United Nations.">
@@ -26,7 +26,7 @@
         <script src="/scripts/base.js"></script>
         <!-- <script src="/scripts/index.js"></script> -->
         <!-- <script type="module" src="/scripts/contextenu.js"></script> -->
-        <title>RijnMUN ARCHIVES</title>
+        <title>Archive Photos | RijnMUN</title>
     </head>
     <body>
         <header data-nosnippet>
@@ -36,7 +36,7 @@
 
             <!-- dropdown for laptop version -->
             <div class="menu" id="menu">
-                <a href="/" class="current">Home</a>
+                <a href="/" class="normal">Home</a>
                 <div class="normal">
                     <div class="dropdown">
                         <a id="dropbtn" class="dropbtn" href="/rijnmun-2024/general-information">Past Editions</a>
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                 </div>
-                <a class="normal" href="/photos">Photos</a>
+                <a class="current" href="/photos">Photos</a>
                 <!-- <a class="normal" href="/contact">Uploads</a> -->
                 <p class="icon" onclick="show_bars()" style="height: 30px;">
                         <span id="bar1" class="bar" style="--i:0"></span>
@@ -77,8 +77,8 @@
             </div>
             <div class="container">
                 
-                <div class="year" id="y2024" onclick="window.location.href = '/2024/'">
-                    <h2 class="year-title">2024</h2>
+                <div class="year" id="y2024" onclick="window.location.href = '/2024/photos'">
+                    <h2 class="year-title">2024 Photos</h2>
                 </div>
                 
             </div>
@@ -109,7 +109,7 @@
                 }
             </script>
         </main>
-                <footer data-nosnippet>
+        <footer data-nosnippet>
             <div class="f_container">
                 <div class="f">
                     <div class="ft">
