--- a/photos.html
+++ b/photos.html
@@ -73,7 +73,7 @@
         </div></noscript>
         <main onclick="hide_bars()">
             <div class="title">
-                <h1>RijnMUN Archive</h1>
+                <h1>RijnMUN Past Photos</h1>
             </div>
             <div class="container">
                 
