--- a/photos.html
+++ b/photos.html
@@ -39,7 +39,7 @@
                 <a href="/" class="normal">Home</a>
                 <div class="normal">
                     <div class="dropdown">
-                        <a id="dropbtn" class="dropbtn" href="/rijnmun-2024/general-information">Past Editions</a>
+                        <a id="dropbtn" class="dropbtn" href="/">Past Editions</a>
                         <div class="dropdown-content">
                             <a href="/2024/">RijnMUN 2024</a>
                         </div>
